# electricity_consumption_dashboard

./: README.md  pyproject.toml
hwjob/dashboard/: admin.py  models.py  tests.py  utils.py  views.py
hwjob/dashboard/migrations/: 0002_client_has_elec_heating_consumption_has_anomaly.py  0003_auto_20250921_1402.py  0004_client_has_recent_anomaly.py  0005_auto_20250921_2046.py
hwjob/dashboard/static/dashboard/css/: dashboard.css
hwjob/dashboard/templates/dashboard/: clients_list.html  consumption_detail.html  search_client.html
